5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1850_2602.log
== TEST (2019-06-25 19:31:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
comida=array(input([["X:" , "Y:" , "Z:"]])
-- ERROR:
File "XXXX", line 4
    
                                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:31:48) 
-- CODE:
from numpy import *
from numpy.linalg import *
comida=array(input([["X:","Y:","Z:"]])
-- ERROR:
File "XXXX", line 4
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 18:37:06) 
-- CODE:
from numpy import *
from numpy.linalg import *
comida=array(input([["X:","Y:","Z:"]])
-- ERROR:
File "XXXX", line 4
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 19:02:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
comida=array(eval(input("matriz: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:01:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
vet=array(eval(input("vetor: ")))
comida=[[2,1,4],[1,2,0],[2,3,2]]
r=dot(vet.T,inv(comida))
print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))
if r[0]==min(r)
-- ERROR:
File "XXXX", line 9
    if r[0]==min(r)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:02:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
vet=array(eval(input("vetor: ")))
comida=[[2,1,4],[1,2,0],[2,3,2]]
r=dot(vet.T,inv(comida))
print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))
if (r[0]==min(r)):
-- ERROR:
File "XXXX", line 10
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:04:10) 
-- CODE:
from numpy import *
from numpy.linalg import *
vet=array(eval(input("vetor: ")))
comida=[[2,1,4],[1,2,0],[2,3,2]]
r=dot(vet.T,inv(comida))
print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))
if r[0]==min(r):
	print("estafilococo")
elif r[1]==min(r):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 18:04:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
vet=array(eval(input("vetor: ")))
comida=[[2,1,4],[1,2,0],[2,3,2]]
r=dot(vet.T,inv(comida))
print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))
if r[0]==min(r):
	print("estafilococo")
elif r[1]==min(r):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.13703
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo -2023.0
salmonela -8652.9
coli 8327.0
salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo -3312.3
salmonela -15824.3
coli 12272.2
salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo 12653.5
salmonela 31251.1
coli -23981.0
coli
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:04:28) 
-- CODE:
from numpy import *
from numpy.linalg import *
vet=array(eval(input("vetor: ")))
comida=[[2,1,4],[1,2,0],[2,3,2]]
r=dot(vet.T,inv(comida))
print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))
if r[0]==min(r):
	print("estafilococo")
elif r[1]==min(r):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 18:05:09) 
-- CODE:
from numpy import *
from numpy.linalg import *
vet=array(eval(input("vetor: ")))
comida=[[2,1,4],[1,2,0],[2,3,2]]
r=dot(inv(comida),v.T)
print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))
if r[0]==min(r):
	print("estafilococo")
elif r[1]==min(r):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.01016
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/2602/main.py", line 5, in <module>
    r=dot(inv(comida),v.T)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:05:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
vet=array(eval(input("vetor: ")))
comida=[[2,1,4],[1,2,0],[2,3,2]]
r=dot(inv(comida),v.T)
print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))
if r[0]==min(r):
	print("estafilococo")
elif r[1]==min(r):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:05:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
vet=array(eval(input("vetor: ")))
comida=[[2,1,4],[1,2,0],[2,3,2]]
r=dot(inv(comida),vet.T)
print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))
if r[0]==min(r):
	print("estafilococo")
elif r[1]==min(r):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 18:05:57) 
-- CODE:
from numpy import *
from numpy.linalg import *
vet=array(eval(input("vetor: ")))
comida=[[2,1,4],[1,2,0],[2,3,2]]
r=dot(inv(comida),vet.T)
print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))
if r[0]==min(r):
	print("estafilococo")
elif r[1]==min(r):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.09055
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo 1923.4
salmonela 1864.5
coli -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo -31711.0
salmonela 16783.4
coli 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo 22647.2
salmonela -9717.3
coli -6745.3
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:07:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
vet=array(eval(input("vetor: ")))
comida=[[2,1,4],[1,2,0],[2,3,2]]
r=dot(inv(comida),vet.T)
print("estafilococo",round(r[0],1))
print("salmonela",round(r[1],1))
print("coli",round(r[2],1))
if r[0]==min(r):
	print("estafilococo")
elif r[1]==min(r):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 18:08:12) 
-- CODE:
from numpy import *
from numpy.linalg import *
vet=array(eval(input("vetor: ")))
comida=[[2,1,4],[1,2,0],[2,3,2]]
r=dot(inv(comida),vet.T)
print("estafilococo:",round(r[0],1))
print("salmonela:",round(r[1],1))
print("coli:",round(r[2],1))
if r[0]==min(r):
	print("estafilococo")
elif r[1]==min(r):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.09597
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
